[project]
name = "linkeddatahub-bots"
version = "0.1.0"
description = "Bot implementations that push RDF data to LinkedDataHub"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai>=0.3.0",
    "rdflib>=7.0.0",
    "webalgebra",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
webalgebra = { path = "../Web-Algebra", editable = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
